Added ZDM publication

--- a/public/publication/2018-esm/index.html
+++ b/public/publication/2018-esm/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Graduate teaching assistants (GTAs) are responsible for the instruction of many statistics courses offered at the university level, yet little is known about these students’ preparation for teaching, their beliefs about how introductory statistics should be taught, or the pedagogical practices of the courses they teach. An online survey to examine these characteristics was developed and administered as part of an NSF-funded project. The results, based on responses from 213 GTAs representing 38 Ph.D.–granting statistics departments in the United States, suggest that many GTAs have not experienced the types of professional development related to teaching supported in the literature. Evidence was also found to suggest that, in general, GTAs teach in ways that are not aligned with their own beliefs. Furthermore, their teaching practices are not aligned with professionally-endorsed recommendations for teaching and learning statistics.">
 
   
-  <link rel="alternate" hreflang="en-us" href="/publication/2017-serj-copy/">
+  <link rel="alternate" hreflang="en-us" href="/publication/2018-esm/">
 
   
 
@@ -69,12 +69,12 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/publication/2017-serj-copy/">
+  <link rel="canonical" href="/publication/2018-esm/">
 
   <meta property="twitter:card" content="summary_large_image">
   
   <meta property="og:site_name" content="Andrew Zieffler">
-  <meta property="og:url" content="/publication/2017-serj-copy/">
+  <meta property="og:url" content="/publication/2018-esm/">
   <meta property="og:title" content="Statistics Graduate Teaching Assistants&#39; Beliefs, Practices, and Preparation for Teaching Introductory Statistics | Andrew Zieffler">
   <meta property="og:description" content="Graduate teaching assistants (GTAs) are responsible for the instruction of many statistics courses offered at the university level, yet little is known about these students’ preparation for teaching, their beliefs about how introductory statistics should be taught, or the pedagogical practices of the courses they teach. An online survey to examine these characteristics was developed and administered as part of an NSF-funded project. The results, based on responses from 213 GTAs representing 38 Ph.D.–granting statistics departments in the United States, suggest that many GTAs have not experienced the types of professional development related to teaching supported in the literature. Evidence was also found to suggest that, in general, GTAs teach in ways that are not aligned with their own beliefs. Furthermore, their teaching practices are not aligned with professionally-endorsed recommendations for teaching and learning statistics."><meta property="og:image" content="/img/headers/andy-zieffler-header.jpg">
   <meta property="og:locale" content="en-us">
@@ -281,35 +281,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Statistics%20Graduate%20Teaching%20Assistants%27%20Beliefs%2c%20Practices%2c%20and%20Preparation%20for%20Teaching%20Introductory%20Statistics&amp;url=%2fpublication%2f2017-serj-copy%2f"
+         href="https://twitter.com/intent/tweet?text=Statistics%20Graduate%20Teaching%20Assistants%27%20Beliefs%2c%20Practices%2c%20and%20Preparation%20for%20Teaching%20Introductory%20Statistics&amp;url=%2fpublication%2f2018-esm%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=%2fpublication%2f2017-serj-copy%2f"
+         href="https://www.facebook.com/sharer.php?u=%2fpublication%2f2018-esm%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2f2017-serj-copy%2f&amp;title=Statistics%20Graduate%20Teaching%20Assistants%27%20Beliefs%2c%20Practices%2c%20and%20Preparation%20for%20Teaching%20Introductory%20Statistics"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2f2018-esm%2f&amp;title=Statistics%20Graduate%20Teaching%20Assistants%27%20Beliefs%2c%20Practices%2c%20and%20Preparation%20for%20Teaching%20Introductory%20Statistics"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2f2017-serj-copy%2f&amp;title=Statistics%20Graduate%20Teaching%20Assistants%27%20Beliefs%2c%20Practices%2c%20and%20Preparation%20for%20Teaching%20Introductory%20Statistics"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2f2018-esm%2f&amp;title=Statistics%20Graduate%20Teaching%20Assistants%27%20Beliefs%2c%20Practices%2c%20and%20Preparation%20for%20Teaching%20Introductory%20Statistics"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Statistics%20Graduate%20Teaching%20Assistants%27%20Beliefs%2c%20Practices%2c%20and%20Preparation%20for%20Teaching%20Introductory%20Statistics&amp;body=%2fpublication%2f2017-serj-copy%2f">
+         href="mailto:?subject=Statistics%20Graduate%20Teaching%20Assistants%27%20Beliefs%2c%20Practices%2c%20and%20Preparation%20for%20Teaching%20Introductory%20Statistics&amp;body=%2fpublication%2f2018-esm%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
