--- a/public/index.html
+++ b/public/index.html
@@ -467,7 +467,7 @@ url('/img/typewriter.png');
   <span itemprop="author">
     Justice, N., Zieffler, A., Huberty, M., delMas, R.</span>
   (2018).
-  <a href="/publication/2018-zdm/" itemprop="name">Every Rose has it&#39;s Thorn: Secondary Teachers&#39; Reasoning about Statistical Models</a>.
+  <a href="/publication/2018-zdm/" itemprop="name">Every Rose has It&#39;s Thorn: Secondary Teachers&#39; Reasoning about Statistical Models</a>.
   <em>ZDM&mdash;The International Journal on Mathematics Education</em>.
   
   <p>
