--- a/public/publication/2018-zdm/index.html
+++ b/public/publication/2018-zdm/index.html
@@ -75,7 +75,7 @@
   
   <meta property="og:site_name" content="Andrew Zieffler">
   <meta property="og:url" content="/publication/2018-zdm/">
-  <meta property="og:title" content="Every Rose has it&#39;s Thorn: Secondary Teachers&#39; Reasoning about Statistical Models | Andrew Zieffler">
+  <meta property="og:title" content="Every Rose has It&#39;s Thorn: Secondary Teachers&#39; Reasoning about Statistical Models | Andrew Zieffler">
   <meta property="og:description" content="Statistical modeling is a core component of statistical thinking and has been identified by several countries as a curricular goal for secondary education. However, many secondary teachers have minimal preparation for teaching this topic. The goal of this research study is to learn about teachers&#39; perceptions of the role statistical models play in statistical inference and how these perceived purposes affect their reasoning about statistical models and inference. Problem-solving interviews were conducted with four in-service teachers who had recently taught a modeling and simulation-based introductory statistics course. Teachers&#39; responses suggest they may not see modeling variation as the primary purpose of statistical modeling and instead substitute two other purposes: making a decision and replicating the data collection process. Suggestions for how to build on teachers&#39; transitional conceptions and refocus attention on modeling variation are discussed."><meta property="og:image" content="/img/headers/andy-zieffler-header.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -86,7 +86,7 @@
 
   
 
-  <title>Every Rose has it&#39;s Thorn: Secondary Teachers&#39; Reasoning about Statistical Models | Andrew Zieffler</title>
+  <title>Every Rose has It&#39;s Thorn: Secondary Teachers&#39; Reasoning about Statistical Models | Andrew Zieffler</title>
 
 
 </head>
@@ -269,7 +269,7 @@
 
 
   <div class="article-container">
-    <h1 itemprop="name">Every Rose has it&#39;s Thorn: Secondary Teachers&#39; Reasoning about Statistical Models</h1>
+    <h1 itemprop="name">Every Rose has It&#39;s Thorn: Secondary Teachers&#39; Reasoning about Statistical Models</h1>
     <span class="pub-authors" itemprop="author">
       
       Justice, N., Zieffler, A., Huberty, M., delMas, R.
@@ -281,7 +281,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Every%20Rose%20has%20it%27s%20Thorn%3a%20Secondary%20Teachers%27%20Reasoning%20about%20Statistical%20Models&amp;url=%2fpublication%2f2018-zdm%2f"
+         href="https://twitter.com/intent/tweet?text=Every%20Rose%20has%20It%27s%20Thorn%3a%20Secondary%20Teachers%27%20Reasoning%20about%20Statistical%20Models&amp;url=%2fpublication%2f2018-zdm%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -295,21 +295,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2f2018-zdm%2f&amp;title=Every%20Rose%20has%20it%27s%20Thorn%3a%20Secondary%20Teachers%27%20Reasoning%20about%20Statistical%20Models"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2f2018-zdm%2f&amp;title=Every%20Rose%20has%20It%27s%20Thorn%3a%20Secondary%20Teachers%27%20Reasoning%20about%20Statistical%20Models"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2f2018-zdm%2f&amp;title=Every%20Rose%20has%20it%27s%20Thorn%3a%20Secondary%20Teachers%27%20Reasoning%20about%20Statistical%20Models"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2f2018-zdm%2f&amp;title=Every%20Rose%20has%20It%27s%20Thorn%3a%20Secondary%20Teachers%27%20Reasoning%20about%20Statistical%20Models"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Every%20Rose%20has%20it%27s%20Thorn%3a%20Secondary%20Teachers%27%20Reasoning%20about%20Statistical%20Models&amp;body=%2fpublication%2f2018-zdm%2f">
+         href="mailto:?subject=Every%20Rose%20has%20It%27s%20Thorn%3a%20Secondary%20Teachers%27%20Reasoning%20about%20Statistical%20Models&amp;body=%2fpublication%2f2018-zdm%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
