--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -267,7 +267,7 @@
   
   
   <div>
-    <h2><a href="/publication/2018-zdm/">Every Rose has it&#39;s Thorn: Secondary Teachers&#39; Reasoning about Statistical Models</a></h2>
+    <h2><a href="/publication/2018-zdm/">Every Rose has It&#39;s Thorn: Secondary Teachers&#39; Reasoning about Statistical Models</a></h2>
     <div class="article-style">
       
     </div>
