--- a/public/files/03-plotting-with-ggplot2.html
+++ b/public/files/03-plotting-with-ggplot2.html
@@ -350,7 +350,7 @@ The layers `xlim()` and `ylim()` are used to set the limits on the `\(x\)`-axis 
 
 ```r
 ggplot(data = city, aes(x = education, y = income)) +
-  geom_point(size = 4) +
+  geom_point() +
   xlab("Education level (in years)") +
   ylab("Income level (in U.S. dollars)") +
   xlim(0, 30) +
