Updated WLS notes

--- a/public/files/epsy-8264/10-heteroskedasticity-and-wls.html
+++ b/public/files/epsy-8264/10-heteroskedasticity-and-wls.html
@@ -13,7 +13,7 @@
 <meta name="author" content="EPsy 8264" />
 
 
-<title>Polynomial Regression II: Cross-Validation</title>
+<title>Heteroskedasticity: Variance Stabilizing Transformations, Weighted Least Squares Estimation, and Sandwich Estimation</title>
 
 <link href="10-heteroskedasticity-and-wls_files/tufte-css-2015.12.29/tufte.css" rel="stylesheet" />
 <link href="10-heteroskedasticity-and-wls_files/tufte-css-2015.12.29/envisioned.css" rel="stylesheet" />
@@ -44,7 +44,7 @@ if (window.hljs) {
 
 
 
-<h1 class="title toc-ignore">Polynomial Regression II: Cross-Validation</h1>
+<h1 class="title toc-ignore">Heteroskedasticity: Variance Stabilizing Transformations, Weighted Least Squares Estimation, and Sandwich Estimation</h1>
 <h4 class="author"><em>EPsy 8264</em></h4>
 <h4 class="date"><em>October 2018</em></h4>
 
