--- a/public/404.html
+++ b/public/404.html
@@ -262,10 +262,6 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/2018-03-15-boys-hockey-post-hoc/">Minnesota State High School Boys Hockey Predictions (Post Hoc Analysis)</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="/post/2018-03-08-boys-hockey/">Minnesota State High School Boys Hockey Predictions (Updated Quarterfinals)</a></li>
   </ul>
   
@@ -279,6 +275,10 @@
   
   <ul>
     <li><a href="/post/epsy-3264-basic-and-applied-statistics/">EPsy 3264: Basic and Applied Statistics</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/2019-04-30-computer-brain/"></a></li>
   </ul>
   
   
