--- a/public/index.html
+++ b/public/index.html
@@ -1317,7 +1317,7 @@ url('/img/typewriter.png');
   
   
   <h3 class="article-title" itemprop="headline">
-    <a href="/post/richard-hamming-on-calculus/" itemprop="url">Richard Hamming on Calculus</a>
+    <a href="/post/richard-hamming-on-calculus/" itemprop="url">Richard Hamming on the Teaching of Mathematics</a>
   </h3>
   <div class="article-style" itemprop="articleBody">
     
