--- a/public/index.html
+++ b/public/index.html
@@ -1899,7 +1899,8 @@ Ethan at the public part of his Final Oral Examination.
 <ul>
 <li><a href="https://www.google.com/url?q=http://r-bloggers.com&amp;sa=D&amp;ust=1520187345253000&amp;usg=AFQjCNFUpFqK5Vl6LgCCppwwqZMD47N1xQ" target="_blank">R Bloggers</a></li>
 <li><a href="https://rweekly.org" target="_blank">R Weekly</a></li>
-<li><a href="https://brandonlebeau.org/" target="_blank">Educate-R</a></li>
+<li><a href="https://brandonlebeau.org/" target="_blank">Educate-R</a> &mdash; Brandon LeBeau&rsquo;s blog</li>
+<li><a href="https://statisticaljourneys.home.blog/ (Vimal’s blog)" target="_blank">Statistical Journeys</a> &mdash; Vimal Rao&rsquo;s blog</li>
 </ul>
 
   </div>
